Revert "fix(profile): avoid stale startup svg size causing chart clipping (#108) (#476)" (#477)
This reverts commit 7351bd1e872440ecd93d018b0ff40be273de2791.

--- a/src/index.css
+++ b/src/index.css
@@ -1699,6 +1699,8 @@ input {
 
 .chart-panel svg {
   display: block;
+  width: 100%;
+  height: 100%;
   min-height: 150px;
   max-height: 240px;
 }
